<resources>
    <string name="app_name">Mántum CMMS</string>
    <string name="powerby">Mántum S.A.S</string>
    <string name="request_reading_error">Ocurrió un error al leer la respuesta</string>
    <string name="request_error">Ocurrió un error al tratar de autenticar el usuario</string>
    <string name="authentication_error_resquest">Ocurrió un error al tratar de autenticar el usuario</string>
    <string name="authentication_error_credentials">Usuario o contraseña inválidos</string>
    <string name="authentication_error_connection">Hay inconvenientes de conexión, por favor intenta de nuevo</string>
    <string name="setting_error_resquest">Ocurrió un error al tratar de obtener los parámetros</string>
    <string name="setting_error">Ocurrió un error al obtener los parámetros de configuración</string>
    <string name="offline">No tienes conexión a internet, inténtalo cuando tengas una conexión estable</string>
    <string name="token_error">Ocurrió un error al obtener el token de acceso</string>
    <string name="token_error_qr">Recuerde que debe de leer un código QR valido</string>
    <string name="authentication_error_url">Recuerda que debes de leer el código QR antes de autenticarse</string>
    <string name="login.username">Usuario</string>
    <string name="login.password">Contraseña</string>
    <string name="login.access">Ingresar</string>
    <string name="login.access.dev">Ingresar con JSON</string>
    <string name="cedula_empty">El número de cédula es requerido</string>
    <string name="login.username.empty">El nombre del usuario es requerido</string>
    <string name="login.password.empty">La contraseña es requerida</string>
    <string name="error_authentication">No te encuentras autenticado en la aplicación, por favor cierra la aplicación y autenticate de nuevo</string>
    <string name="error_transferencia">La transferencia no se encuentra registrada</string>
    <string name="error_set_almacenista">Ocurrió un error al asignar el nuevo almacenista</string>
    <string name="error_detail_ot">La orden de trabajo ya no se encuentra registrada</string>
    <string name="error_detalle_actividad_mantenimiento">La entidad ya no se encuentra registrada</string>
    <string name="about_version_app">Versión aplicación:</string>
    <string name="about_version_server">Versión soportada:</string>
    <string name="about_ruta_base_datos">Ruta base de datos:</string>
    <string name="about_connect">Conectado:</string>
    <string name="descargar">Descargar</string>
    <string name="traslado_ip">Trasladar activos de IP</string>
    <string name="almacen_filtro_cantidad">Solo disponible</string>
    <string name="about_database">Base de datos:</string>
    <string name="select_search">No se cual seleccionaste, intenta de nuevo</string>
    <string name="message_barcode_search">Por favor ponga el código QR o el código de barras dentro del recuadro</string>
    <string name="request_error_search">Intentalo de nuevo, ya que la conexión no es estable</string>
    <string name="message_search">No has realizado ninguna búsqueda</string>
    <string name="message_search_empty">No se encontraron resultados</string>
    <string name="message_not_items_selected">No has seleccionado ningún elemento</string>
    <string name="message_search_empty_scan">No se encontraron resultados, código escaneado: </string>
    <string name="item_not_in_store_1">El elemento</string>
    <string name="item_not_in_store_2">no se encuentra asociado a tu almacén</string>
    <string name="message_search_no_disponibles">Los artículos sin cantidad disponible seran omitidos</string>
    <string name="message_nfc_empty">La lectura arroja datos vacios</string>
    <string name="add_resource">Agregar</string>
    <string name="cancel_resource">Cancelar</string>
    <string name="error_app">Ocurrió un error inesperado, intente de nuevo por favor</string>
    <string name="bitacora_resources_empty">No tiene recursos asociados</string>
    <string name="personal_autocomplete_empty">No se encontraron personales con este filtro</string>
    <string name="proveedor_autocomplete_empty">No se encontraron proveedores con este filtro</string>
    <string name="cliente_autocomplete_empty">No se encontraron clientes con este filtro</string>
    <string name="bitacora_resources_empty_mochila">No tiene recursos asociados en almacén</string>
    <string name="lista_empty_almacen">No tienes elementos asociados en tu almacén</string>
    <string name="personal_autocomplete">Filtra por Cédula, Nombre o Grupo de personal</string>
    <string name="proveedor_autocomplete">Filtra por Nit o Nombre</string>
    <string name="cliente_autocomplete">Filtra por Código o Nombre</string>
    <string name="acept_resource">Aceptar</string>
    <string name="remove_resource_title">Eliminar recurso</string>
    <string name="remove_resource_message">Desea eliminar el recurso asociado</string>
    <string name="error_request_mochila">Ocurrió un error al tratar de obtener los recursos de la mochila</string>
    <string name="transacciones">Transacciones</string>
    <string name="preference_socket_estado">Indica si la aplicación tiene una conexión estable con el web socket</string>
    <string name="actualizar">Actualizar</string>
    <string name="detalle">Ver detalle</string>
    <string name="ubicacion">Ubicación</string>
    <string name="general">General</string>
    <string name="preference_ubicacion">Ubicación</string>
    <string name="preference_socket">Web socket</string>
    <string name="preference_transaccion_directa">Transacciones directas</string>
    <string name="preference_notificacion_satisfactoria">Notificaciones exitosas</string>
    <string name="preference_notificacion_erronea">Notificaciones fallidas</string>
    <string name="preference_descripcion_transaccion_directa">Permite realizar las transacciones directamente al servidor antes de encolarlas</string>
    <string name="preference_notificacion_descripcion_satisfactorias">Mostrar las notificaciones de los elementos sincronizados exitosamente</string>
    <string name="preference_notificacion_descripcion_erronea">Mostrar las notificaciones de los elementos sincronizados con fallas</string>
    <string name="autorizacion_acceso">Autorización de acceso</string>
    <string name="validacion_ingreso_qr">Validar ingreso autorización</string>
    <string name="titulo_actualizar_certificado">Actualizar certificado WAF</string>
    <string name="ss_option_actualizar">Actualizar</string>
    <string name="ss_option_bitacora">Registrar bitácora</string>
    <string name="ss_option_evaluar">Evaluar</string>
    <string name="ss_option_comentario">Agregar comentario</string>
    <string name="ss_option_recibir">Recibir</string>
    <string name="orden_trabajo_opcion_bitacora">Registrar bitácora</string>
    <string name="orden_trabajo_opcion_recibir">Recibir</string>
    <string name="orden_trabajo_opcion_terminar">Terminar</string>
    <string name="refresh_transaccion">Reintentar</string>
    <string name="remover_transaccion">Remover</string>
    <string name="enviar_detalle">Compartir detalle</string>
    <string name="edit_transaccion">Editar</string>
    <string name="accesos_rapidos">Accesos rápidos</string>
    <string name="estado_inicial">Estado inicial</string>
    <string name="informe_tecnico">Informe técnico</string>
    <string name="remover">Remover</string>
    <string name="descargar_autorizaciones">Descargar autorizaciones</string>
    <string name="ubicar">Ubicación</string>
    <string name="registrar_tiempos">Registrar tiempos</string>
    <string name="inspeccion_electrica">Inspección de calidad</string>
    <string name="actualizar_contacto">Actualizar contacto</string>
    <string name="eventos">Eventos</string>
    <string name="descargar_entidades">Descargar entidades</string>
    <string name="descargar_inventarios">Descargar inventarios</string>
    <string name="descargar_recursos">Descargar recursos</string>
    <string name="descargar_rutas_trabajo">Descargar listas de chequeo</string>
    <string name="lista_chequeo">Lista de chequeo</string>
    <string name="lista_chequeo_entidad">Lista de chequeo</string>
    <string name="registrar_firmaxentidad">Registrar Firmas</string>
    <string name="descargas">Descargas</string>
    <string name="recorrido_planta_externa">Obras civiles recorridos</string>
    <string name="instalacion_planta_externa">Requisitos de ingreso e Ing. red</string>
    <string name="parametros">Parámetros</string>
    <string name="permisos">Permisos</string>
    <string name="registrar_solicitud_servicio">Registrar S.S.</string>
    <string name="registrar_ot_bitacora">Registrar O.T. bitácora</string>
    <string name="registrar_lectura">Registrar lectura</string>
    <string name="ver_ubicacion">Ver ubicación</string>
    <string name="preference_validar_registro_ot">Validar registro O.T.</string>
    <string name="preference_validar_registro_rt">Validar registro R.T.</string>
    <string name="preference_validar_registro_rt_descripcion">Exige en el registro de una ruta de trabajo que el usuario tenga que leer la entidad por medio de código QR</string>
    <string name="preference_validar_registro_ot_descripcion">Exige en el registro de una bitácora que el usuario tenga que leer la entidad por medio de código QR</string>
    <string name="preference_registrar_paros">Registrar paro de mantenimiento</string>
    <string name="preference_validar_registrar_paros_descripcion">Permite registrar un paro de mantenimiento desde el registro de bitácora</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="asociar_nfc">Asociar NFC</string>
    <string name="asociar_qr">Asociar código de barras o QR</string>
    <string name="preference_title_whitelist">Lista blanca</string>
    <string name="preference_summary_whitelist">Permitir que la aplicación permanezca conectada en segundo plano</string>
    <string name="preference_gestion_servicios">Módulo gestión servicios</string>
    <string name="preference_panel_gestion_servicios">Panel gestión servicios</string>
    <string name="preference_summary_gestion_servicios">Permite visualizar los módulos de gestión servicios</string>
    <string name="preference_summary_panel_gestion_servicios">Permite visualizar la pestaña de O.T. asignadas</string>
    <string name="asociar_archivos">Asociar fotografías / archivos</string>
    <string name="preference_summary_busqueda_recursos">No permite al usuario agregar nuevos recursos </string>
    <string name="preference_title_busqueda_recursos">Bloquear búsqueda de recursos</string>
    <string name="preference_title_campos_adicionales_crear_equipo">Campos adicionales crear equipo</string>
    <string name="preference_summary_campos_adicionales_crear_equipo">Muestra campos adicionales en el registrar un nuevo equipo</string>
    <string name="drop_item">Borrar</string>
    <string name="asignar_padre_nfc">Asignar padre por NFC</string>
    <string name="asignar_padre_qr">Asignar padre por escaneo de código</string>
    <string name="asignar_padre_jerarquia">Asignar padre desde jerarquía</string>
    <string name="registrar_falla">Registrar falla</string>
    <string name="gestion_falla_mensaje">Estás gestionando una falla, ¿qué deseas realizar?</string>
    <string name="gestion_falla_accion_1">Continuar gestionando la misma falla</string>
    <string name="gestion_falla_accion_2">Gestionar una falla diferente con nueva información</string>
    <string name="gestion_falla_accion_3">Gestionar una falla diferente con la información actual</string>
    <string name="tipo_salida">Tipo de salida</string>
    <string name="registrar_bitacora_evento">Registrar bitácora evento</string>
    <string name="extra">Extra</string>
    <string name="manager_pti_eir">Gestión PTI/EIR</string>
    <string name="inventario_activos">Inventario activos</string>
</resources>