<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/detail"
        android:orderInCategory="1"
        android:title="@string/detalle" />

    <item
        android:id="@+id/refresh"
        android:orderInCategory="2"
        android:title="@string/refresh_transaccion" />

    <item
        android:id="@+id/sincronizar"
        android:orderInCategory="3"
        android:title="@string/sincronizar" />

    <item
        android:id="@+id/edit"
        android:orderInCategory="3"
        android:title="@string/edit_transaccion" />

    <item
        android:id="@+id/remove"
        android:orderInCategory="4"
        android:title="@string/remover_transaccion" />

    <item
        android:id="@+id/sendemail"
        android:orderInCategory="5"
        android:title="@string/enviar_detalle" />

</menu>