<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="18dp"
        android:padding="@dimen/bagge_1"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/gestion_falla_mensaje" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/dialog_paddding">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/falla_accion_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:padding="@dimen/bagge_1"
            android:text="@string/gestion_falla_accion_1"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/falla_accion_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:padding="@dimen/bagge_1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/gestion_falla_accion_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/falla_accion_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:padding="@dimen/bagge_1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/gestion_falla_accion_3" />

    </LinearLayout>

</LinearLayout>